--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,6 +27,10 @@
         <li class="nav-item" routerLinkActive="active" >
           <a class="nav-link" routerLink="imagenes">UploadImages</a>
         </li>
+
+        <li class="nav-item" routerLinkActive="active" >
+          <a class="nav-link" routerLink="imagenes">GoogleMaps</a>
+        </li>
         
       </ul>
 
