--- a/src/app/components/uploadimages/fotos/fotos.component.html
+++ b/src/app/components/uploadimages/fotos/fotos.component.html
@@ -9,8 +9,19 @@
    
 </div>
 
-<div class="row">
+<div class="row mt-3">
    <div class="col-12">
+
+    <div class="card-columns">
+
+        <div class="card" *ngFor="let foto of imagenes">
+            <img class="card-img-top" [src]="foto.url">
+            <div class="card-body">
+                <h5 class="card-title">{{ foto.nombre }}</h5>
+            </div>
+        </div>
+    
+    </div>
     
    </div>
 
